--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -564,6 +564,9 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
 
-      <app-cta *ngIf="!isLoggedIn()"></app-cta>
-      <app-footer></app-footer>
+<app-cta *ngIf="!isLoggedIn()"></app-cta>
+<app-footer></app-footer>
