--- a/src/app/job-details/job-details.component.css
+++ b/src/app/job-details/job-details.component.css
@@ -348,7 +348,7 @@ img {
 .related-jobs-section {
   background-color: #f8f9fa;
   padding: 3rem 0;
-  margin-top: 3rem;
+  margin: 3rem 0 3rem;
 }
 
 .section-title {
