--- a/src/app/job-details/job-details.component.html
+++ b/src/app/job-details/job-details.component.html
@@ -442,6 +442,7 @@
       </div>
     </div>
   </section>
-  <app-cta></app-cta>
+  <!-- CTA only for unauthenticated users -->
+  <app-cta *ngIf="!isLoggedIn()"></app-cta>
   <app-footer></app-footer>
 </div>
